# ponderadas-m9

./: README.md
pond1/: README.md  sensor.py  sensorSubscriber.py  sunRadSensor.py
pond2/: README.md  setup.cfg
pond2/pySensor.egg-info/: PKG-INFO  SOURCES.txt
pond2/src/: sensor.py  sensorSubscriber.py  sunRadSensor.py
pond2/tests/: test_get_data.py  test_qos.py  test_sub.py
pond4/: README.md  publisher.go
pond6/: README.md  go.mod  publisher.go
