[metadata]
name = pySensor
version = 1.0
author = MIhaell Alves
author_email = mihaell.alves@sou.inteli.edu.br
description = Ponderada 2 do modulo 09 de Engenharia da Computação - Cidades Inteligentes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://inteli.edu
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    importlib-metadata
    pydantic

[options.packages.find]
exclude = 
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    flake8
    tox